Fix additional info fields vertical spacing

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -1005,7 +1005,6 @@ div.panel-pane div.node.boxed {
     display: none;
   }
   .pane-content {
-    display: inline-block;
     width: 100%;
   }
 
